@@ -12,10 +12,10 @@
     portal_type="Text Portlet"/>
  <object name="portlet_documents" meta_type="CPS Portlet"
     portal_type="Document Portlet"/>
- <object name="portlet_folder" meta_type="CPS Portlet"
-    portal_type="Custom Portlet"/>
  <object name="portlet_folderactions" meta_type="CPS Portlet"
     portal_type="Actions Portlet"/>
+ <object name="portlet_foldercontents" meta_type="CPS Portlet"
+    portal_type="Custom Portlet"/>
  <object name="portlet_language" meta_type="CPS Portlet"
     portal_type="Language Portlet"/>
  <object name="portlet_navigation_centertop" meta_type="CPS Portlet"
