@@ -2,33 +2,33 @@
 <object name="portlet_breadcrumbs" meta_type="CPS Portlet"
    portal_type="Breadcrumbs Portlet">
  <f id="Contributors">
-  <e v="root"/>
+  <e v="admin"/>
  </f>
  <f id="Coverage" v=""/>
- <f id="CreationDate" v="20051224144629Z"/>
- <f id="Creator" v="root"/>
+ <f id="CreationDate" v="20060103165529Z"/>
+ <f id="Creator" v="admin"/>
  <f id="Description" v=""/>
  <f id="EffectiveDate" v=""/>
  <f id="ExpirationDate" v=""/>
  <f id="Format" v="text/html"/>
  <f id="Language" v=""/>
- <f id="ModificationDate" v="20051224144629Z"/>
+ <f id="ModificationDate" v="20060103165530Z"/>
  <f id="Relation" v=""/>
  <f id="Rights" v=""/>
  <f id="Source" v=""/>
  <f id="Subject"/>
  <f id="Title" v="Breadcrumbs"/>
- <f id="allow_discussion" v="0"/>
+ <f id="allow_discussion" v="False"/>
  <f id="cache_cleanup_date" v=""/>
  <f id="cache_params"/>
  <f id="cache_timeout" v="300"/>
  <f id="disable_override" v="0"/>
  <f id="display" v="horizontal_trail"/>
- <f id="display_hidden_folders" v="1"/>
- <f id="display_site_root" v="1"/>
+ <f id="display_hidden_folders" v="True"/>
+ <f id="display_site_root" v="True"/>
  <f id="first_item" v="0"/>
  <f id="highlight_last_item" v="0"/>
- <f id="identifier" v="portlet_558742591"/>
+ <f id="identifier" v="portlet_774132486"/>
  <f id="javascript" v=""/>
  <f id="layout" v=""/>
  <f id="order" v="0"/>
