@@ -2,23 +2,23 @@
 <object name="portlet_contactinfo" meta_type="CPS Portlet"
    portal_type="Custom Portlet">
  <f id="Contributors">
-  <e v="root"/>
+  <e v="admin"/>
  </f>
  <f id="Coverage" v=""/>
- <f id="CreationDate" v="20051224144632Z"/>
- <f id="Creator" v="root"/>
+ <f id="CreationDate" v="20060103165530Z"/>
+ <f id="Creator" v="admin"/>
  <f id="Description" v=""/>
  <f id="EffectiveDate" v=""/>
  <f id="ExpirationDate" v=""/>
  <f id="Format" v="text/html"/>
  <f id="Language" v=""/>
- <f id="ModificationDate" v="20051224144632Z"/>
+ <f id="ModificationDate" v="20060103165530Z"/>
  <f id="Relation" v=""/>
  <f id="Rights" v=""/>
  <f id="Source" v=""/>
  <f id="Subject"/>
  <f id="Title" v="Contact Info"/>
- <f id="allow_discussion" v="0"/>
+ <f id="allow_discussion" v="False"/>
  <f id="cache_cleanup_date" v=""/>
  <f id="cache_params"/>
  <f id="cache_timeout" v="0"/>
@@ -27,7 +27,7 @@
   <e v="protocol"/>
  </f>
  <f id="disable_override" v="0"/>
- <f id="identifier" v="portlet_558742604"/>
+ <f id="identifier" v="portlet_774132499"/>
  <f id="javascript" v=""/>
  <f id="js_render_method" v=""/>
  <f id="order" v="10"/>
