@@ -1,24 +1,24 @@
 <?xml version="1.0"?>
-<object name="portlet_documents1" meta_type="CPS Portlet"
+<object name="portlet_documents" meta_type="CPS Portlet"
    portal_type="Document Portlet">
  <f id="Contributors">
-  <e v="root"/>
+  <e v="admin"/>
  </f>
  <f id="Coverage" v=""/>
- <f id="CreationDate" v="20051224194806Z"/>
- <f id="Creator" v="root"/>
+ <f id="CreationDate" v="20060103165529Z"/>
+ <f id="Creator" v="admin"/>
  <f id="Description" v=""/>
  <f id="EffectiveDate" v=""/>
  <f id="ExpirationDate" v=""/>
  <f id="Format" v="text/html"/>
  <f id="Language" v=""/>
- <f id="ModificationDate" v="20051224194806Z"/>
+ <f id="ModificationDate" v="20060103165530Z"/>
  <f id="Relation" v=""/>
  <f id="Rights" v=""/>
  <f id="Source" v=""/>
  <f id="Subject"/>
  <f id="Title" v="Document Portlet"/>
- <f id="allow_discussion" v="0"/>
+ <f id="allow_discussion" v="False"/>
  <f id="cache_cleanup_date" v=""/>
  <f id="cache_params"/>
  <f id="cache_timeout" v="0"/>
@@ -26,7 +26,7 @@
  <f id="cluster_no_fallback" v="0"/>
  <f id="context_rpath" v=""/>
  <f id="disable_override" v="0"/>
- <f id="identifier" v="portlet_204576427"/>
+ <f id="identifier" v="portlet_774132493"/>
  <f id="javascript" v=""/>
  <f id="order" v="10"/>
  <f id="photo"/>
@@ -40,4 +40,6 @@
  <f id="slot" v="content_well"/>
  <f id="slot_override" v="0"/>
  <f id="visibility_range" v="1-0"/>
+ <guard groups="" permissions=""
+    roles="">python: published == 'folder_view'</guard>
 </object>
