@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
-<object name="portlet_navigation_content" meta_type="CPS Portlet"
-   portal_type="Navigation Portlet">
+<object name="portlet_foldercontents" meta_type="CPS Portlet"
+   portal_type="Custom Portlet">
  <f id="Contributors">
   <e v="admin"/>
  </f>
@@ -17,26 +17,19 @@
  <f id="Rights" v=""/>
  <f id="Source" v=""/>
  <f id="Subject"/>
- <f id="Title" v="Subfolders"/>
+ <f id="Title" v="Folder contents"/>
  <f id="allow_discussion" v="False"/>
- <f id="authorized_only" v="True"/>
  <f id="cache_cleanup_date" v=""/>
  <f id="cache_params"/>
  <f id="cache_timeout" v="0"/>
- <f id="context_is_portlet" v="0"/>
- <f id="context_rpath" v=""/>
- <f id="contextual" v="0"/>
+ <f id="custom_cache_params">
+  <e v="no-cache"/>
+ </f>
  <f id="disable_override" v="0"/>
- <f id="display" v="subfolder_contents"/>
- <f id="display_description" v="False"/>
- <f id="display_hidden_folders" v="False"/>
- <f id="display_managers" v="0"/>
- <f id="dummy" v=""/>
- <f id="end_depth" v="0"/>
- <f id="folder_prefixes"/>
- <f id="identifier" v="portlet_774132494"/>
+ <f id="identifier" v="portlet_774132495"/>
  <f id="javascript" v=""/>
- <f id="order" v="20"/>
+ <f id="js_render_method" v=""/>
+ <f id="order" v="30"/>
  <f id="photo"/>
  <f id="photo_original"/>
  <f id="photo_position" v=""/>
@@ -44,16 +37,10 @@
  <f id="portlet" v=""/>
  <f id="preview"/>
  <f id="provider" v=""/>
- <f id="rel_depth" v="0"/>
- <f id="root_uids">
-  <e v="sections"/>
-  <e v="workspaces"/>
- </f>
- <f id="show_docs" v="0"/>
- <f id="show_icons" v="False"/>
+ <f id="render_method" v="portlet_folder_contents"/>
  <f id="slot" v="content_well"/>
  <f id="slot_override" v="0"/>
- <f id="visibility_range" v="1-0"/>
+ <f id="visibility_range" v="0-0"/>
  <guard groups="" permissions=""
     roles="">python: published == 'folder_view'</guard>
 </object>
