@@ -2,30 +2,30 @@
 <object name="portlet_language" meta_type="CPS Portlet"
    portal_type="Language Portlet">
  <f id="Contributors">
-  <e v="root"/>
+  <e v="admin"/>
  </f>
  <f id="Coverage" v=""/>
- <f id="CreationDate" v="20051224144629Z"/>
- <f id="Creator" v="root"/>
+ <f id="CreationDate" v="20060103165529Z"/>
+ <f id="Creator" v="admin"/>
  <f id="Description" v=""/>
  <f id="EffectiveDate" v=""/>
  <f id="ExpirationDate" v=""/>
  <f id="Format" v="text/html"/>
  <f id="Language" v=""/>
- <f id="ModificationDate" v="20051224144629Z"/>
+ <f id="ModificationDate" v="20060103165530Z"/>
  <f id="Relation" v=""/>
  <f id="Rights" v=""/>
  <f id="Source" v=""/>
  <f id="Subject"/>
  <f id="Title" v="Language selector"/>
  <f id="action" v="change"/>
- <f id="allow_discussion" v="0"/>
+ <f id="allow_discussion" v="False"/>
  <f id="cache_cleanup_date" v=""/>
  <f id="cache_params"/>
  <f id="cache_timeout" v="1800"/>
  <f id="disable_override" v="0"/>
  <f id="dummy" v=""/>
- <f id="identifier" v="portlet_558742593"/>
+ <f id="identifier" v="portlet_774132488"/>
  <f id="javascript" v=""/>
  <f id="order" v="2"/>
  <f id="photo"/>
