@@ -2,24 +2,24 @@
 <object name="portlet_navigation_left" meta_type="CPS Portlet"
    portal_type="Navigation Portlet">
  <f id="Contributors">
-  <e v="root"/>
+  <e v="admin"/>
  </f>
  <f id="Coverage" v=""/>
- <f id="CreationDate" v="20051224144630Z"/>
- <f id="Creator" v="root"/>
+ <f id="CreationDate" v="20060103165529Z"/>
+ <f id="Creator" v="admin"/>
  <f id="Description" v=""/>
  <f id="EffectiveDate" v=""/>
  <f id="ExpirationDate" v=""/>
  <f id="Format" v="text/html"/>
  <f id="Language" v=""/>
- <f id="ModificationDate" v="20051224144630Z"/>
+ <f id="ModificationDate" v="20060103165530Z"/>
  <f id="Relation" v=""/>
  <f id="Rights" v=""/>
  <f id="Source" v=""/>
  <f id="Subject"/>
  <f id="Title" v="Navigation"/>
- <f id="allow_discussion" v="0"/>
- <f id="authorized_only" v="1"/>
+ <f id="allow_discussion" v="False"/>
+ <f id="authorized_only" v="True"/>
  <f id="cache_cleanup_date" v=""/>
  <f id="cache_params"/>
  <f id="cache_timeout" v="0"/>
@@ -28,13 +28,13 @@
  <f id="contextual" v="0"/>
  <f id="disable_override" v="0"/>
  <f id="display" v="navigation_tree"/>
- <f id="display_description" v="0"/>
- <f id="display_hidden_folders" v="0"/>
+ <f id="display_description" v="False"/>
+ <f id="display_hidden_folders" v="False"/>
  <f id="display_managers" v="0"/>
  <f id="dummy" v=""/>
  <f id="end_depth" v="0"/>
  <f id="folder_prefixes"/>
- <f id="identifier" v="portlet_558742596"/>
+ <f id="identifier" v="portlet_774132491"/>
  <f id="javascript" v=""/>
  <f id="order" v="50"/>
  <f id="photo"/>
@@ -50,7 +50,7 @@
   <e v="workspaces"/>
  </f>
  <f id="show_docs" v="0"/>
- <f id="show_icons" v="1"/>
+ <f id="show_icons" v="True"/>
  <f id="slot" v="left"/>
  <f id="slot_override" v="0"/>
  <f id="visibility_range" v="0-0"/>
