@@ -2,23 +2,23 @@
 <object name="portlet_objectactions" meta_type="CPS Portlet"
    portal_type="Actions Portlet">
  <f id="Contributors">
-  <e v="root"/>
+  <e v="admin"/>
  </f>
  <f id="Coverage" v=""/>
- <f id="CreationDate" v="20051224144632Z"/>
- <f id="Creator" v="root"/>
+ <f id="CreationDate" v="20060103165530Z"/>
+ <f id="Creator" v="admin"/>
  <f id="Description" v=""/>
  <f id="EffectiveDate" v=""/>
  <f id="ExpirationDate" v=""/>
  <f id="Format" v="text/html"/>
  <f id="Language" v=""/>
- <f id="ModificationDate" v="20051224144632Z"/>
+ <f id="ModificationDate" v="20060103165530Z"/>
  <f id="Relation" v=""/>
  <f id="Rights" v=""/>
  <f id="Source" v=""/>
  <f id="Subject"/>
  <f id="Title" v="Object actions"/>
- <f id="allow_discussion" v="0"/>
+ <f id="allow_discussion" v="False"/>
  <f id="cache_cleanup_date" v=""/>
  <f id="cache_params"/>
  <f id="cache_timeout" v="0"/>
@@ -28,7 +28,7 @@
  </f>
  <f id="disable_override" v="0"/>
  <f id="dummy" v=""/>
- <f id="identifier" v="portlet_558742602"/>
+ <f id="identifier" v="portlet_774132497"/>
  <f id="javascript" v=""/>
  <f id="order" v="0"/>
  <f id="photo"/>
@@ -38,7 +38,7 @@
  <f id="portlet" v=""/>
  <f id="preview"/>
  <f id="provider" v=""/>
- <f id="show_icons" v="0"/>
+ <f id="show_icons" v="False"/>
  <f id="slot" v="right"/>
  <f id="slot_override" v="0"/>
  <f id="visibility_range" v="0-0"/>
