@@ -2,29 +2,29 @@
 <object name="portlet_welcome" meta_type="CPS Portlet"
    portal_type="Text Portlet">
  <f id="Contributors">
-  <e v="root"/>
+  <e v="admin"/>
  </f>
  <f id="Coverage" v=""/>
- <f id="CreationDate" v="20051224194806Z"/>
- <f id="Creator" v="root"/>
+ <f id="CreationDate" v="20060103165529Z"/>
+ <f id="Creator" v="admin"/>
  <f id="Description" v=""/>
  <f id="EffectiveDate" v=""/>
  <f id="ExpirationDate" v=""/>
  <f id="Format" v="text/html"/>
  <f id="Language" v=""/>
- <f id="ModificationDate" v="20051224194806Z"/>
+ <f id="ModificationDate" v="20060103165530Z"/>
  <f id="Relation" v=""/>
  <f id="Rights" v=""/>
  <f id="Source" v=""/>
  <f id="Subject"/>
  <f id="Title" v="Welcome message"/>
- <f id="allow_discussion" v="0"/>
+ <f id="allow_discussion" v="False"/>
  <f id="cache_cleanup_date" v=""/>
  <f id="cache_params"/>
  <f id="cache_timeout" v="0"/>
  <f id="disable_override" v="0"/>
  <f id="i18n" v="1"/>
- <f id="identifier" v="portlet_204576426"/>
+ <f id="identifier" v="portlet_774132483"/>
  <f id="javascript" v=""/>
  <f id="order" v="0"/>
  <f id="photo"/>
@@ -40,4 +40,6 @@
  <f id="text_format" v="normal"/>
  <f id="text_position" v="html"/>
  <f id="visibility_range" v="0-1"/>
+ <guard groups="" permissions=""
+    roles="">python: published == 'index_html'</guard>
 </object>
