@@ -24,6 +24,8 @@ Bug fixes:
 - Fixed #1152: Reset password email should be i18ned.
 - Made the history of documents display the full name of the users instead of
   the usernames.
+- updated the default profile so that portlets have their default guard set as
+  previously
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Less restrictive permission check to allow
